about update - fix img z-index in foods counter area

--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -47,7 +47,6 @@
       height  : 90px;
       margin  : 0 auto;
       position: relative;
-      z-index : 2;
     }
 
     .g-s-4 {
